<resources>
    <string name="app_name">Sharekni</string>
    <string name="title_activity_main">Sharekni</string>
    <string name="hello_world">Hello </string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="title_activity_sub_navigate">sharekni</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_colse">Close</string>
    <string-array name="tabs">
        <item>Tab 1</item>
        <item>Tab 2</item>
        <item>Tab 3</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_top_rides">TopRidesActivity</string>
    <string name="title_activity_top_drivers">TopDrivers</string>
    <string name="title_activity_On_Boarding">Sharekni</string>
    <string name="title_activity_view_profile">ViewProfileActivity</string>
    <string name="txt_yo_yo">yo yo</string>
    <string name="from_text_top_ride">From :</string>
    <string name="to_text_top_ride">To   :</string>
    <string name="city_from_txt">City Name</string>
    <string name="city_to_txt">City Name2</string>
    <string name="Distreict_name_txt">District Name</string>
    <string name="district_name_2">District Name 2</string>
    <string name="txt_arabic">عربي</string>
    <string name="fragment_one_login_txt">LOGIN</string>
    <string name="txt_best_drivers">Best Drivers</string>
    <string name="txt_top_rides">Most Rides</string>
    <string name="txt_about_us">About Us</string>
    <string name="title_activity_home_page_test">HomePageTest</string>
    <string name="title_activity_login_approved">LoginApproved</string>
    <string name="title_activity_search_options">SearchOptions</string>
    <string name="title_activity_register_approved">Register</string>
    <string name="title_activity_route_teset">RouteTesetActiv</string>
    <string name="title_activity_register_new_test">User Registration</string>
    <string name="title_activity_my_profile_tet">MyProfileTet</string>
    <string name="title_activity_top_rides_after_login">TopRidesAfterLogin</string>
    <string name="title_activity_top_drivers_after_login">TopDriversAfterLogin</string>
    <string name="title_activity_most_rides_details">MostRidesDetails</string>
    <string name="title_activity_forget_password">ForgotPassword</string>
    <string name="title_activity_change_password_test">ChangePasswordTest</string>
    <string name="title_activity_my_profile_test">MyProfileTest</string>
    <string name="title_activity_edit_profile_test">EditProfileTest</string>
    <string name="btn_login_text">Login</string>
    <string name="title_activity_quick_search">QuickSearch</string>
    <string name="title_activity_quick_search_results">QuickSearchResults</string>
    <string name="title_activity_driver_create_car_pool">DriverCreateCarPool</string>
    <string name="title_activity_qsearch">QSearch</string>
    <string name="title_activity_advanced__search">Advanced_Search</string>
    <string name="title_activity_driver_alerts_for_request">DriverAlertsForRequest</string>
    <string name="title_activity_ride_details_passenger">RideDetailsPassenger</string>
    <string name="title_activity_driver_request_details">DriverRequestDetails</string>
    <string name="title_activity_driver_created_rides">DriverCreatedRides</string>
    <string name="title_activity_driver_joined_rides">DriverJoinedRides</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_test_vedio">Sharekni</string>
    <string name="title_activity_passenger_my_approved_rides">PassengerMyApprovedRides</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_take_atour">TakeATour</string>
    <string name="navy_Home_Page_txt">Home Page</string>
    <string name="navy_Most_Rides_str">Most Rides</string>
    <string name="navy_Best_Drivers_str">Best Drivers</string>
    <string name="navy_Search_Options_str">Search</string>
    <string name="navy_Notifications_str">Notifications</string>
    <string name="navy_Logout_str">Logout</string>
    <string name="navy_List_image_content_Desc">navy_image_icon</string>
    <string name="Reg_appBar_name">Registration</string>
    <string name="fill_all_error">Fill All Required fields</string>
    <string name="fill_Email">Fill Email please</string>
    <string name="Reg_FirstN">First Name</string>
    <string name="Reg_LastN">Last Name</string>
    <string name="REg_Mobile">Mobile Number</string>
    <string name="Reg_Email">Username (Your Email)</string>
    <string name="Reg_pass">Password</string>
    <string name="Reg_Nat">Nationality</string>
    <string name="Reg_PrefLang">Preferred Language</string>
    <string name="title_activity_pick_up">PickUpActivity</string>
    <string name="title_activity_terms_and_cond">TermsAndCond</string>
    <string name="title_activity_register_vehicle">RegisterVehicle</string>
    <string name="Register_Vehicle_Driving_License_No">Traffic File No.</string>
    <string name="Select_Emirate_txt">Select Emirate</string>
    <string name="Ok_txt">Ok</string>
    <string name="Register_Vehicle_Trraffic_Number_Border_Title_">Register Vehicles</string>
    <string name="Pick_Emirate_arrow_content_Desc">pick emirate arrow image</string>
    <string name="Btn_Submit_txt">Submit</string>
    <string name="title_activity_register__vehicle__verify">Register_Vehicle_Verify</string>
    <string name="register_vehicle_verify_border_title">Verification</string>
    <string name="btn_verify_txt">Verify</string>
    <string name="verify_Unified_ID">Unified ID</string>
    <string name="verify_passport_number_txt">Please enter the passport number</string>
    <string name="mobile_number_const">+971 -</string>
    <string name="onboard_most_rides">Most Rides</string>
    <string name="onboard_best_drivers">Best Drivers</string>
    <string name="reg_DateOfBirth">Date of Birth</string>
    <string name="reg_gender_male">Male</string>
    <string name="reg_gender_female">Female</string>
    <string name="reg_upload_photo">Upload your Photo</string>
    <string name="reg_accept_rta">I Accept The RTA\'s</string>
    <string name="reg_save">Save</string>
    <string name="reg_terms">Terms and Conditions.</string>
    <string name="reg_policy">Privacy Policy.</string>
    <string name="loading">Loading</string>
    <string name="login_email_hint">example@gmail.com</string>
    <string name="login_pass_hint">Password</string>
    <string name="login_check_user_pass">Check your Username and Password</string>
    <string name="login_wrong_user_pass">Wrong Username Or Password</string>
    <string name="login_network_error">Network Error !</string>
    <string name="nat_name">NationlityEnName</string>
    <string name="nat_name2">NationalityEnName</string>
    <string name="lang_name">LanguageEnName</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_library">Choose from Library</string>
    <string name="cancel">Cancel</string>
    <string name="add_photo">Add Photo!</string>
    <string name="select_file">Select File</string>
    <string name="unknown_country">Incorrect Country ( Choose From The List )</string>
    <string name="unknown_language">unknown Language ( Choose From The List )</string>
    <string name="short_pass">Password must be at least 5 Character</string>
    <string name="short_mobile">Enter Valid Mobile Number</string>
    <string name="select_image_first_error">Select Profile Image!!</string>
    <string name="select_type_first_error">Please Choose Registration type</string>
    <string name="connection_problem">Connection Problem!</string>
    <string name="con_problem_message">Make sure you have internet connection</string>
    <string name="retry">Retry</string>
    <string name="exit">Exit!</string>
    <string name="goBack">Go Back</string>
    <string name="reg_now">Register Now |</string>
    <string name="forget_pass">Forgot Password?</string>
    <string name="start_point">(Start Point)</string>
    <string name="not_set">Not Specified</string>
    <string name="end_point">(End Point)</string>
    <string name="quick_search">Quick Search</string>
    <string name="languages">Languages</string>
    <string name="destination">Click to Set Direction</string>
    <string name="pickup">Pick Up</string>
    <string name="dropoff">Drop Off</string>
    <string name="start_date">Start Date</string>
    <string name="start_time">Start Time</string>
    <string name="search">Search</string>
    <string name="map_lookup">Map Lookup</string>
    <string name="most_rides">Most Rides</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="select_emirate">Select Emirate</string>
    <string name="enter_region">Enter Region</string>
    <string name="em_name">EmirateEnName</string>
    <string name="reg_name">RegionEnName</string>
    <string name="from_em_name_en">FromEmirateNameEn</string>
    <string name="from_reg_name_en">FromRegionNameEn</string>
    <string name="to_em_name_en">ToEmirateNameEn</string>
    <string name="to_reg_name_en">ToRegionNameEn</string>
    <string name="single">Single</string>
    <string name="periodic">Periodic</string>
    <string name="optional">(Optional)</string>
    <string name="pref_nat">Preferred Nationality</string>
    <string name="choose_lang">Choose A Language</string>
    <string name="choose_age">Choose Age Range</string>
    <string name="drivers">Drivers</string>
    <string name="email_valid_form">Please enter valid email</string>
    <string name="ride_details">Ride Details</string>
    <string name="starting_time">Starting Time</string>
    <string name="sat">, Sat</string>
    <string name="sun">, Sun</string>
    <string name="mon">, Mon</string>
    <string name="tue">, Tue</string>
    <string name="wed">, Wed</string>
    <string name="thu">, Thu</string>
    <string name="fri">, Fri </string>
    <string name="driver_details">Driver Details</string>
    <string name="route_name">RouteEnName</string>
    <string name="time">Time </string>
    <string name="ride_days">Ride Days</string>
    <string name="review">Review</string>
    <string name="pref">Preferences</string>
    <string name="language">Language</string>
    <string name="age_range">Age Range</string>
    <string name="gender">Gender</string>
    <string name="smokers">Smokers</string>
    <string name="nationality">Nationality</string>
    <string name="reviews">Reviews</string>
    <string name="join_ride">Join Ride</string>
    <string name="login_first">In order to proceed you have to login first</string>
    <string name="cannot_review">Cannot Review</string>
    <string name="done">Done</string>
    <string name="pref_lang">PrefLanguageEnName</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="write_remark">Write Your remarks</string>
    <string name="your_remarks">Your remarks</string>
    <string name="i_like_join_ride">I\'d like to join your Ride</string>
    <string name="already_sent_request">You already sent request</string>
    <string name="req_sent_succ">Request had been sent Successfully , Wait for driver Approval.</string>
    <string name="req_sent_succ2">Request had been sent Successfully , Wait for Passenger Approval.</string>
    <string name="acc_nat_name">AccountNationalityEn</string>
    <string name="from_reg_en_name">FromRegionEnName</string>
    <string name="to_reg_en_name">ToRegionEnName</string>
    <string name="last_seen_textview">Last Seen :</string>
    <string name="send_invitation_str">send invitation</string>
    <string name="choose_ride_to_send_invitation">Choose Ride to send Invitation</string>
    <string name="points_str">Points</string>
    <string name="kg_str">Kg</string>
    <string name="co2_saving">CO2 Saving</string>
</resources>