<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.pkmmte.view.CircularImageView
        android:id="@+id/ivProfile"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        app:border="true"
        app:border_color="#EEEEEE"
        app:border_width="2dp"
        android:padding="3dp"
        android:src="@drawable/defaultdriver" />


    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_toEndOf="@+id/ivProfile"
        android:layout_toRightOf="@+id/ivProfile"
        android:padding="5dp"
        android:text="Khaled Farouq"
        android:textSize="16sp"
         />

    <TextView
        android:id="@+id/tvNat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvName"
        android:layout_alignStart="@+id/tvName"
        android:layout_below="@+id/tvName"
        android:layout_marginBottom="5dp"
        android:layout_toEndOf="@+id/ivProfile"
        android:layout_toRightOf="@+id/ivProfile"
        android:padding="5dp"
        android:text="Nationality"
        android:textSize="15sp" />


    <TextView
        android:id="@+id/LastSeenText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvNat"
        android:layout_alignLeft="@+id/tvNat"
        android:layout_alignStart="@+id/tvNat"
        android:text="@string/last_seen_textview"
        android:layout_marginTop="0dp"
        android:textSize="15sp"
        android:padding="5dp"

        />

    <TextView
        android:id="@+id/LastSeenTvValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/LastSeenText"
        android:layout_toEndOf="@+id/LastSeenText"
        android:layout_alignBottom="@+id/LastSeenText"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:text=""
        android:layout_marginTop="0dp"
        android:padding="5dp"
        android:textSize="15sp"

        />


    <LinearLayout
        android:id="@+id/GreenPoint_Linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LastSeenText"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_weight="2"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:orientation="vertical"

                >

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="-8dp"
                    android:src="@drawable/leaf" />

                <View
                    android:id="@+id/GreenLine"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:background="#4a7e03" />


                <View
                    android:id="@+id/GreenLine2"
                    android:layout_width="0.5dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center_horizontal"
                    android:background="#4a7e03" />

                <TextView
                    android:id="@+id/Green_Points_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text=""
                    android:textColor="#4a7e03"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/points_str"
                    android:textSize="13sp"
                    android:layout_marginTop="5dp"
                    android:lines="1"
                    android:maxLines="1"
                    />


            </LinearLayout>


        </LinearLayout>

        <RelativeLayout
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:background="@drawable/green_point_border"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:id="@+id/Green1"
            android:layout_centerHorizontal="true"
            >
            <ImageView
                android:id="@+id/GreenPointCar_im"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="-5dp"
                android:layout_marginRight="-5dp"
                android:src="@drawable/greenpointcar"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="7dp"
                android:layout_toEndOf="@+id/GreenPointCar_im"
                android:layout_toRightOf="@+id/GreenPointCar_im"
                android:text="@string/co2_saving"
                android:textColor="#4a7e03"
                android:textSize="9sp" />

        </RelativeLayout>




        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Green1"
            android:layout_centerHorizontal="true"
            >
            <TextView
                android:id="@+id/Green_co2_saving_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="2dp"
                android:lines="1"
                android:maxLines="1"
                android:text="12054815"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/Green_co2_saving_txt"
                android:layout_gravity="center_vertical"
                android:layout_toEndOf="@+id/Green_co2_saving_txt"
                android:layout_toRightOf="@+id/Green_co2_saving_txt"
                android:lines="1"
                android:maxLines="1"
                android:text="@string/kg_str"
                android:textSize="12sp" />

        </RelativeLayout>

        </RelativeLayout>


    </LinearLayout>



    <TextView
        android:id="@+id/Best_Drivers_Item_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvNat"
        android:layout_toEndOf="@+id/tvNat"
        android:layout_toRightOf="@+id/tvNat"
        android:padding="5dp"
        android:text="4.3"
        android:textSize="16sp" />


    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignBottom="@+id/Best_Drivers_Item_rate"
        android:layout_toEndOf="@+id/Best_Drivers_Item_rate"
        android:layout_toRightOf="@+id/Best_Drivers_Item_rate"
        android:src="@drawable/rate"

        />


    <ImageView

        android:id="@+id/im1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_centerVertical="true"
        android:src="@drawable/msg"
        android:paddingTop="10dp"
        android:layout_alignBottom="@+id/tvNat"
        />


    <ImageView
        android:id="@+id/im5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/im1"
        android:layout_toStartOf="@+id/im1"
        android:paddingTop="10dp"
        android:src="@drawable/call"
        android:layout_alignBottom="@+id/tvNat"
        />


    <!--<Button-->
    <!--android:id="@+id/Best_Drivers_Item_Details"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="30dp"-->
    <!--android:layout_alignParentEnd="true"-->
    <!--android:layout_alignParentRight="true"-->
    <!--android:layout_below="@+id/im1"-->
    <!--android:background="@drawable/user_register_border_button"-->
    <!--android:text="Details"-->
    <!--android:textAllCaps="false"-->
    <!--android:textColor="#FFFFFF"-->
    <!--android:layout_marginTop="10dp"-->
    <!--/>-->

    <!--<ImageView-->
    <!--android:id="@+id/im3"-->
    <!--android:layout_width="25dp"-->
    <!--android:layout_height="25dp"-->
    <!--android:layout_alignLeft="@+id/Best_Drivers_Item_Details"-->
    <!--android:layout_alignStart="@+id/Best_Drivers_Item_Details"-->
    <!--android:layout_below="@+id/Best_Drivers_Item_Details"-->
    <!--android:layout_marginTop="5dp"-->
    <!--android:src="@drawable/add"-->

    <!--/>-->

    <!--<ImageView-->
    <!--android:id="@+id/im4"-->
    <!--android:layout_width="25dp"-->
    <!--android:layout_height="25dp"-->
    <!--android:layout_alignEnd="@+id/Best_Drivers_Item_Details"-->
    <!--android:layout_alignRight="@+id/Best_Drivers_Item_Details"-->
    <!--android:layout_below="@+id/Best_Drivers_Item_Details"-->
    <!--android:layout_marginTop="5dp"-->
    <!--android:src="@drawable/chat" />-->


    <!--<ImageView-->
    <!--android:layout_width="25dp"-->
    <!--android:layout_height="25dp"-->
    <!--android:src="@drawable/rate"-->
    <!--android:layout_above="@+id/Best_Drivers_Item_Details"-->
    <!--android:layout_alignEnd="@+id/Best_Drivers_Item_Details"-->
    <!--android:layout_alignRight="@+id/Best_Drivers_Item_Details"-->

    <!--/>-->


</RelativeLayout>